--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header Section -->
   <header>
     <main>
-      Welcome To Royal Interior
+     <marquee direction="left" behaviuor="scroll"> Welcome To Royal Interior</marquee > 
     </main>
   
      <div class="this">
@@ -23,7 +23,7 @@
         <a href="index.html">Home</a>
         <a href="about us.html">About us</a>
         <a href="service.html">Service</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact1.html">Contact</a>
         
         
       </div>
