--- a/kitchen.html
+++ b/kitchen.html
@@ -19,33 +19,64 @@
         <div class="bab">
            <div class="babe">
             <img src="./image/kik1.jpeg" alt="kik1" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Modern kitchen with sleek cabinetry and smart appliances.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik2.jpeg" alt="kik2" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Luxury kitchen featuring marble countertops and gold accents.</p>
+
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik3.jpeg" alt="kik3" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Minimalist kitchen with neutral tones and functional design.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik4.jpeg" alt="kik4" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Open-plan kitchen seamlessly integrated with the living area.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik5.jpeg" alt="kik5" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Compact kitchen optimized for small spaces with clever storage solutions.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik6.jpeg" alt="kik6" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Industrial-style kitchen with exposed pipes and raw textures.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik7.jpeg" alt="kik7" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Classic kitchen with vintage fixtures and timeless elegance.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik8.jpeg" alt="kik8" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Family-friendly kitchen with an island and kid-safe features.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik9.jpeg" alt="kik9" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Eco-friendly kitchen with sustainable materials and energy-efficient appliances.</p>
+            </div>
            </div>
            <div class="babe">
             <img src="./image/kik10.jpeg" alt="kik10" width="500px" height="300px">
+            <div class="driver-text">
+                <p>Contemporary kitchen with bold colors and innovative design elements.</p>
+            </div>
            </div>
         </div>
     </main>
