--- a/living.html
+++ b/living.html
@@ -18,34 +18,64 @@
      <main> 
         <div class="bab">
             <div class="babe">
-                <img src="./image/lil1.jpeg" alt="lil1">
+                <img src="./image/lil1.jpeg" alt="lil1" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Modern living room with sleek furniture and minimalist decor.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil2.jpeg" alt="lil2">
+                <img src="./image/lil2.jpeg" alt="lil2" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Luxury living room featuring plush sofas and elegant chandeliers.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil3.jpeg" alt="lil3">
+                <img src="./image/lil3.jpeg" alt="lil3" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Cozy living room with warm lighting and soft textures.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil4.jpeg" alt="lil4">
+                <img src="./image/lil4.jpeg" alt="lil4" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Open-plan living room seamlessly integrated with the dining area.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil5.jpeg" alt="lil5">
+                <img src="./image/lil5.jpeg" alt="lil5" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Small living room optimized for functionality and style.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil6.jpeg" alt="lil6">
+                <img src="./image/lil6.jpeg" alt="lil6" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Industrial-style living room with exposed brick walls and raw textures.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil7.jpeg" alt="lil7">
+                <img src="./image/lil7.jpeg" alt="lil7" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Classic living room with vintage furniture and timeless elegance.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil8.jpeg" alt="lil8">
+                <img src="./image/lil8.jpeg" alt="lil8" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Family-friendly living room with durable materials and kid-safe features.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil9.jpeg" alt="lil9">
+                <img src="./image/lil9.jpeg" alt="lil9" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Eco-friendly living room with sustainable materials and energy-efficient lighting.</p>
+                </div>
             </div>
             <div class="babe">
-                <img src="./image/lil10.jpeg" alt="lil10">
+                <img src="./image/lil10.jpeg" alt="lil10" width="700px" height="300px">
+                <div class="driver-text">
+                    <p>Contemporary living room with bold colors and innovative design elements.</p>
+                </div>
             </div>
         </div>
      </main>
