--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Home</a>
                 <a href="about us.html">About us</a>
                 <a href="service.html">Service</a>
-                <a href="contact.html">Contact</a>
+                <a href="contact1.html">Contact</a>
             </div>
         </header>
         <main>
@@ -43,6 +43,7 @@
                     <div class="item">
                       <img src="./image/office4.jpeg" alt="">
                       <a href="office.html">Office</a>
+                      
                     </div>
                    <div class="item">
                       <img src="./image/bedroom.jpeg" alt="">
@@ -66,18 +67,40 @@
            <section>
             <div class="drive">
               <div class="driver">
-                <img src="kitchen3.jpeg" alt="Kitchen Image" width="500px" height="300px" >
+                <img src="kitchen3.jpeg" alt="Kitchen Image" width="700px" height="300px" >
+                <div class="driver-text">
+                <p>A state-of-the-art kitchen with smart appliances and minimalist design.</p>
+              </div>
               </div>
               <div class="driver">
-                <img src="living1.jpeg" alt="living room" width="500px" height="300px">
+                <img src="living1.jpeg" alt="living room" width="700px" height="300px">
+                <div class="driver-text">
+                <p>An inviting living room with plush seating and warm lighting.</p>
+                  </div>
               </div>
-              <div class="driver">              <img src="chair1.jpeg" alt="chair" width="500px" height="300px"></div>
+              <div class="driver">           
+                   <img src="chair1.jpeg" alt="chair" width="700px" height="300px">
+                   <div class="driver-text">
+                   <p>Comfortable chairs designed for ergonomic support and modern appeal.</p>
+                  </div>
+                  </div>
               <div class="driver">
-                <img src="off1.jpeg" alt="office" width="500px" height="300px">
+                <img src="off1.jpeg" alt="office" width="700px" height="300px">
+                <div class="driver-text">
+                <p>A professional workspace with modular furniture and ample storage.</p>
               </div>
-              <div class="driver">            <img src="bedroom1.jpeg" alt="bedroom" width="500px" height="300px"></div>
+              </div>
+              <div class="driver">           
+                 <img src="bedroom1.jpeg" alt="bedroom" width="700px" height="300px">
+                 <div class="driver-text">
+                 <p>A cozy bedroom with soft textures and ambient lighting.</p>
+                </div>
+                </div>
               <div class="driver">
-                <img src="war1.jpeg" alt="war1" width="500px" height="300px">
+                <img src="war1.jpeg" alt="war1" width="700px" height="300px">
+                <div class="driver-text">
+                <p>A spacious wardrobe with customizable shelves and drawers.</p>
+              </div>
               </div>
 
               
