--- a/living.html
+++ b/living.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="about us.html">About us</a>
             <a href="service.html">Service</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact1.html">Contact</a>
         </div>
     </header>
      <main> 
